test/files/neg/t6289.check
t6289/J.java:2: error: method does not override or implement a method from a supertype
  @Override public void foo() { }
  ^
1 error
